# package_liblouis

./: .gitignore  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/liblouis_package_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: liblouis_package.podspec
ios/Classes/: liblouis_package.c
lib/: liblouis_package.dart  liblouis_package_bindings_generated.dart
src/: CMakeLists.txt  compileTranslationTable.c  config.h  liblouis_package.c
